fix: fix chart is behind button search

--- a/Public/css/chart.css
+++ b/Public/css/chart.css
@@ -340,7 +340,7 @@ button i {
   }
   
   .myChart {
-    top: 60%;
+    top: 70%;
   }
 
   .home {
